--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,10 @@ jobs:
   build:
 
     runs-on: windows-2019
-
+    strategy:
+      matrix:
+        dotnet-version: [ '4.8.x' ]
+        
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
