--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,17 +26,18 @@ jobs:
       uses: NuGet/setup-nuget@v1.0.2
 
     - name: Restore NuGet Packages
-      run: nuget restore SimpleFrameworkApp.sln
+      run: nuget restore NACCM.sln
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
           dotnet-version: '4.8.x'
+          
     - name: Restore dependencies
       run: dotnet restore
       
     - name: Build and Publish Web App
-      run: msbuild SimpleFrameworkApp.sln /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile
+      run: msbuild NACCM.sln /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile
  
     - name: Build with dotnet
       run: dotnet build --configuration Release
