--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,5 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: Build NACCM
 
@@ -10,11 +8,14 @@ jobs:
   build:
 
     runs-on: windows-2019
-    strategy:
-      matrix:
-        dotnet-version: [ '4.8.x' ]
-        
+          
     steps:
+
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1
+	      with:
+    	  msbuild-architecture: x64
+     
     - name: Checkout Code
       uses: actions/checkout@v3
     
@@ -24,23 +25,15 @@ jobs:
     - name: Restore NuGet Packages
       run: nuget restore NACCM.sln
       
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-          dotnet-version: '4.8.x'
-          
-    - name: Restore dependencies
-      run: dotnet restore
+
       
     - name: Build and Publish Web App
       run: msbuild NACCM.sln /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile
- 
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
- 
-    - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-    
+
+    - name: Build app for release
+  run: msbuild src\YourProjectFile.csproj -t:rebuild -verbosity:diag -property:Configuration=Release
+
+
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
