--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,11 +13,11 @@ jobs:
 
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
-	      with:
+	with:
     	  msbuild-architecture: x64
      
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@master
     
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.2
