--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
 
 	- name: Check out the code    
-      	uses: actions/checkout@master
+      	uses: actions/checkout@v2 
       
     	- name: Add msbuild to PATH
       	uses: microsoft/setup-msbuild@v1
