--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,10 +14,7 @@ jobs:
       - uses: microsoft/setup-msbuild@v1
         with:
            msbuild-architecture: x64
-       
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.0.2
-     
+           
       - name: Navigate to workspace
         run: cd GITHUB_WORKSPACE
 
@@ -28,7 +25,7 @@ jobs:
         run: nuget restore naccm.sln
             
       - name: Build App
-        run: msbuild NACCM.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
+        run: msbuild ../NACCM/NACCM.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v1.0.0
