--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
            msbuild-architecture: x64
            
       - name: Navigate to workspace
-        run: cd GITHUB_WORKSPACE
+        run: cd $GITHUB_WORKSPACE
 
       - name: Create a build directory
         run: mkdir _build
