--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         run: mkdir _build
 
       - name: Restore Packages
-        run: nuget restore naccm.sln
+        run: nuget restore ../NACCM/naccm.sln
             
       - name: Build App
         run: msbuild ../NACCM/NACCM.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
