--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,8 +22,8 @@ jobs:
         run: mkdir _build
 
       - name: Restore Packages
-        run: nuget restore ${{ github.workspace }}/NACCM2/NACCM/naccm.sln
-         
+        run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
+
       - name: Build App
         run: msbuild ./NACCM2/NACCM/NACCM.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
 
