--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Restore Packages
         run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
 
+      - name: gac dependency
+        run: gacutil /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll
+
       - name: Build App
         run: msbuild ${{ github.workspace }}\NACCM\naccm.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="PRDAPP3WithPRDDB3" /p:PublishUrl="../_build"
 
