--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
         run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
 
       - name: gac dependency
-        run: "%WindowsSDK_ExecutablePath_x64%\gacutil.exe" /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll
+        run: "%WindowsSDK_ExecutablePath_x64%/gacutil.exe" /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll
 
       - name: Build App
         run: msbuild ${{ github.workspace }}\NACCM\naccm.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="PRDAPP3WithPRDDB3" /p:PublishUrl="../_build"
