--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Restore Packages
         run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
 
+      - name: gac loader
+        run: Load("System.EnterpriseServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a")
+
       - name: gac dependency1
         run: $publish = New-Object System.EnterpriseServices.Internal.Publish
 
