--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,15 +23,9 @@ jobs:
 
       - name: Restore Packages
         run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
-
-      - name: gac loader
-        run: Load("System.EnterpriseServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a")
-
-      - name: gac dependency1
-        run: $publish = New-Object System.EnterpriseServices.Internal.Publish
-
+    
       - name: gac dependency2
-        run: $publish.GacInstall( /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll )
+        run: C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\gacutil.exe /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll 
 
       - name: Build App
         run: msbuild ${{ github.workspace }}\NACCM\naccm.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="PRDAPP3WithPRDDB3" /p:PublishUrl="../_build"
