--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,8 @@ jobs:
         run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
     
       - name: gac dependency2
-        run: C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\gacutil.exe /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll 
+        run: |
+         & "C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\gacutil.exe" /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll 
 
       - name: Build App
         run: msbuild ${{ github.workspace }}\NACCM\naccm.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="PRDAPP3WithPRDDB3" /p:PublishUrl="../_build"
