--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
         run: cd $GITHUB_WORKSPACE
 
       - name: Create a build directory
-        run: mkdir _build
+        run: mkdir _build  
 
       - name: Restore Packages
         run: nuget restore ${{ github.workspace }}\NACCM\naccm.sln
@@ -36,4 +36,9 @@ jobs:
         with:
            name: Build Output
            path: "./_build"
-   
+
+      - name: Create a codeql directory      
+        run: mkdir _codeql-databases
+
+      - name: build scan database
+        run:  codeql database create ${{ github.workspace }}\_codeql-databases\NACCMCodeProjectDatabase --db-cluster --threads=2 --language=csharp,javascript --source-root=${{ github.workspace }}\NACCM\naccm.sln
