--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,4 +41,4 @@ jobs:
         run: mkdir _codeql-databases
 
       - name: build scan database
-        run:  github/codeql database create ${{ github.workspace }}\_codeql-databases\NACCMCodeProjectDatabase --db-cluster --threads=2 --language=csharp,javascript --source-root=${{ github.workspace }}\NACCM\naccm.sln
+        run:  github/Codeql database create ${{ github.workspace }}\_codeql-databases\NACCMCodeProjectDatabase --db-cluster --threads=2 --language=csharp,javascript --source-root=${{ github.workspace }}\NACCM\naccm.sln
