--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,11 @@ jobs:
         run: |
          & "C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\gacutil.exe" /i ${{ github.workspace }}\ApplicationStartup\obj\ServiceLogging.dll 
 
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: 'csharp'
+
       - name: Build App
         run: msbuild ${{ github.workspace }}\NACCM\naccm.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="PRDAPP3WithPRDDB3" /p:PublishUrl="../_build"
 
@@ -40,5 +45,7 @@ jobs:
       - name: Create a codeql directory      
         run: mkdir _codeql-databases
 
-      - name: build scan database
-        run:  github/Codeql database create ${{ github.workspace }}\_codeql-databases\NACCMCodeProjectDatabase --db-cluster --threads=2 --language=csharp,javascript --source-root=${{ github.workspace }}\NACCM\naccm.sln
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
