--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,11 @@ jobs:
   build:
 
     runs-on: windows-2019 
-          
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+      
     steps:
       - uses: actions/checkout@v3
        
@@ -47,5 +51,4 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:${{matrix.language}}"
+      
